--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Last name, First name | Demo 03-03</title>
+    <title>O'Brien, Caroline | Demo 03-03</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -19,6 +19,10 @@
       </ul>
     </nav>
 
+    <div class="cards">
+     <img src="bouquet.jpg" alt="A bouquet of pink flowers laid down on a table." />
+    </div>
 
+   <p> daisy by Phạm Thanh Lộc from the Noun Project </p>
   </body>
 </html>
