--- a/index.html
+++ b/index.html
@@ -7,22 +7,28 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>Famous Musicians</h1>
-    <h2>Blowin' Up the Charts</h2>
+    <a href="index.html"><img class="logo" src="bouquet.svg" alt="A purple bouquet of daisies with a ribbon." /></a>
+    
+    <h1>Caroline's Flower Shop</h1>
+    <h2>Beautiful Flowers</h2>
 
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="bach.html">Bach</a></li>
-        <li><a href="beethoven.html">Beethoven</a></li>
-        <li><a href="mozart.html">Mozart</a></li>
+        <li><a href="daisies.html">Daisies</a></li>
+        <li><a href="roses.html">Roses</a></li>
+        <li><a href="lilac.html">Lilac</a></li>
       </ul>
     </nav>
 
     <div class="cards">
-     <img src="bouquet.jpg" alt="A bouquet of pink flowers laid down on a table." />
+     <a href="daisies.html"><img src="daisy.jpg" alt="A white and blue pot holds a bouquet of white daisies with bright yellow centers." /></a>
+     <a href="roses.html"><img src="bouquet.jpg" alt="A bouquet of pink flowers laid down on a table." /></a>
+     <a href="lilac.html"><img src="lilac.jpg" alt="A clear vase hold blue, purple, and white lilac flowers." /></a>
     </div>
 
-   <p> daisy by Phạm Thanh Lộc from the Noun Project </p>
+    <div class="textblock">
+    <p> flower bouquet by Vectors Point from the Noun Project </p>
+    </div>
   </body>
 </html>
