--- a/lilac.html
+++ b/lilac.html
@@ -7,9 +7,19 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>Famous Musicians</h1>
-    <h2>Johann Sebastian Bach</h2>
+    <a href="index.html"><img class="logo" src="bouquet.svg" alt="A purple bouquet of daisies with a ribbon." /></a>
+    <h1>Caroline's Flower Shop</h1>
+    <h2>Lilac Bouquet</h2>
 
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="daisies.html">Daisies</a></li>
+        <li><a href="roses.html">Roses</a></li>
+        <li><a href="lilac.html">Lilac</a></li>
+      </ul>
+    </nav>
+    <div class="textblock">
     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit venenatis platea risus, in nunc sem suspendisse cum dis primis imperdiet vulputate lobortis magnis, inceptos quam semper ultrices feugiat aliquet rutrum condimentum facilisi. Malesuada lectus luctus nec sollicitudin class ullamcorper et, facilisis faucibus ornare aptent condimentum integer cum nibh, ante penatibus leo dui semper mauris. Iaculis tempus etiam hac leo consequat sociosqu odio sem dictum, lobortis mus class himenaeos conubia diam malesuada metus, nisl vulputate facilisis arcu commodo cursus fringilla scelerisque. Mollis eros nascetur pellentesque penatibus suspendisse, suscipit diam interdum commodo fringilla iaculis, porta magna nostra taciti.</p>
 
 		<p>Pretium quisque sociis malesuada nec varius ligula ultrices torquent, parturient consequat lectus suspendisse aenean tristique tortor diam, rhoncus morbi turpis auctor nisl enim placerat. Sociis gravida iaculis primis interdum mollis dictumst suscipit rutrum urna, mus curabitur luctus volutpat maecenas potenti quis consequat, vel dui praesent mattis torquent integer quisque phasellus. Gravida curabitur blandit est sociis vivamus morbi sollicitudin lobortis, vitae vehicula vel quis himenaeos nisl nulla netus, ac consequat lectus facilisis fringilla hendrerit condimentum. A inceptos porta ante eros litora hendrerit auctor, nulla ultricies lacus enim leo fusce netus pulvinar, iaculis potenti ad placerat erat cum.</p>
@@ -22,6 +32,8 @@
 
 		<p>Cubilia curae donec metus tempus habitasse nibh morbi, vehicula velit fusce primis vulputate mollis felis potenti, per nisi integer posuere aptent hac. Vivamus habitasse vel imperdiet fringilla urna ut magnis himenaeos, vulputate cum hac hendrerit nulla a cubilia eget, in diam primis sollicitudin platea semper sem. Potenti interdum ridiculus arcu leo tempus sapien nascetur facilisi vulputate cras, habitasse varius natoque maecenas ultrices cursus mus nibh sociosqu, quisque nunc purus nulla ut diam tellus dignissim dis. Sollicitudin fermentum primis felis convallis faucibus mi odio montes, egestas tincidunt accumsan eu blandit posuere curae pulvinar justo, malesuada sagittis praesent magnis sapien conubia fringilla.</p>
 
+  <p> flower bouquet by Vectors Point from the Noun Project </p>
 
+  </div>
   </body>
 </html>
