--- a/daisies.html
+++ b/daisies.html
@@ -19,11 +19,14 @@
         <li><a href="lilac.html">Lilac</a></li>
       </ul>
     </nav>
+
     <div class="textblock">
     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit venenatis platea risus, in nunc sem suspendisse cum dis primis imperdiet vulputate lobortis magnis, inceptos quam semper ultrices feugiat aliquet rutrum condimentum facilisi. Malesuada lectus luctus nec sollicitudin class ullamcorper et, facilisis faucibus ornare aptent condimentum integer cum nibh, ante penatibus leo dui semper mauris. Iaculis tempus etiam hac leo consequat sociosqu odio sem dictum, lobortis mus class himenaeos conubia diam malesuada metus, nisl vulputate facilisis arcu commodo cursus fringilla scelerisque. Mollis eros nascetur pellentesque penatibus suspendisse, suscipit diam interdum commodo fringilla iaculis, porta magna nostra taciti.</p>
 
 		<p>Pretium quisque sociis malesuada nec varius ligula ultrices torquent, parturient consequat lectus suspendisse aenean tristique tortor diam, rhoncus morbi turpis auctor nisl enim placerat. Sociis gravida iaculis primis interdum mollis dictumst suscipit rutrum urna, mus curabitur luctus volutpat maecenas potenti quis consequat, vel dui praesent mattis torquent integer quisque phasellus. Gravida curabitur blandit est sociis vivamus morbi sollicitudin lobortis, vitae vehicula vel quis himenaeos nisl nulla netus, ac consequat lectus facilisis fringilla hendrerit condimentum. A inceptos porta ante eros litora hendrerit auctor, nulla ultricies lacus enim leo fusce netus pulvinar, iaculis potenti ad placerat erat cum.</p>
 
+    <img class="odd" src="white-daisy.jpeg" alt="A field of white daisies with yellow centers, but only one is focused." />
+    
 		<p>Scelerisque condimentum neque habitasse pulvinar torquent inceptos nunc natoque arcu platea curae curabitur, aliquet id nullam litora felis senectus varius dictum mattis duis. Consequat velit lectus habitasse primis mus felis ultrices curabitur proin, pellentesque penatibus cubilia eleifend quam rhoncus at interdum, dui posuere eu facilisis pretium tincidunt quisque condimentum. Justo turpis cum in at tristique nec ornare, porttitor volutpat accumsan aliquam interdum ut lectus, vivamus gravida odio suscipit nostra placerat.</p>
 
 		<p>Proin rutrum montes primis sagittis duis eu porttitor suspendisse aliquet eros, et morbi penatibus inceptos dui augue turpis mattis diam netus lacus, velit tristique class pharetra suscipit dis per nunc eleifend. Non rhoncus nibh dictumst suscipit malesuada accumsan lacus sem at donec, ante praesent montes libero magnis augue consequat aliquet conubia ac torquent, sociosqu cras cum leo fusce est pharetra habitant proin. Posuere turpis in fusce etiam, leo dictumst varius. Condimentum quisque class et nunc faucibus fames himenaeos viverra dignissim netus, eu blandit vestibulum laoreet bibendum conubia parturient morbi eros, facilisi a penatibus sodales mattis tincidunt porta sagittis libero.</p>
